--- a/palette/index.html
+++ b/palette/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,73 @@
     <title>codejam-palette</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    
+    <div class="global-wrapper">
+        <header class="header">
+            <div class="header__left">
+                <div class="burger">
+                    <img src="./assets/nav-icon.svg" alt="nav">
+                </div>
+                <h1>Codejam - Palette</h1>
+            </div>
+            <div class="dots">
+                <img src="./assets/menu-icon.svg" alt="menu">
+            </div>
+        </header>
+        <main class="main">
+            <div class="tools-wrapper">
+                <div class="main-tools">
+                    <ul class="main-tools__list">
+                        <li class="main-tools__item" title="click b" id="bucket">
+                            <img src="./assets/bucket-icon.svg" alt="bucket">
+                            <span>Paint bucket</span>
+                        </li>
+                        <li class="main-tools__item" title="click c" id="picker">
+                            <img src="./assets/picker-icon.svg" alt="color picker">
+                            <span>Choose color</span>
+                            <input type="color" name="input-color" id="input-color" class="hidden"
+                                title="click to select color" value="#adff2f">
+                        </li>
+                        <li class="main-tools__item selected" title="click p" id="pencil">
+                            <img src="./assets/pencil-icon.svg" alt="pencil">
+                            <span>Pencil</span>
+                        </li>
+                        <li class="main-tools__item">
+                            <img src="./assets/transform-icon.svg" alt="transform">
+                            <span>Transform</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="color-tools">
+                    <ul class="color-tools__list">
+                        <li class="color-tools__item">
+                            <div class="color color--current"></div>
+                            <span>Current color</span>
+                        </li>
+                        <li class="color-tools__item">
+                            <div class="color color--prev"></div>
+                            <span>Prev color</span>
+                        </li>
+                        <li class="color-tools__item">
+                            <div class="color predefined-first"></div>
+                            <span>red</span>
+                        </li>
+                        <li class="color-tools__item">
+                            <div class="color predefined-second"></div>
+                            <span>blue</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="canvas-wrapper">
+                <canvas id="canvas" width="512" height="512">
+                    update your browser
+                </canvas>
+            </div>
+        </main>
+    </div>
     <script src="./js/index.js"></script>
 </body>
+
 </html>
