--- a/palette/index.html
+++ b/palette/index.html
@@ -48,7 +48,7 @@
                                 <option value="4">4</option>
                                 <option value="8">8</option>
                                 <option value="16">16</option>
-                                <option value="32">32</option>
+                                <option value="32" selected>32</option>
                                 <option value="64">64</option>
                                 <option value="128">128</option>
                             </select>
