feat: load image through API

--- a/codejam-image-api/index.html
+++ b/codejam-image-api/index.html
@@ -70,9 +70,9 @@
             </div>
             <div class="canvas-wrapper">
                 <div class="image-tools">
-                    <div class="load-image">Load</div>
+                    <div class="load-image" id="load-image">Load</div>
                     <input type="search" name="image-search" id="image-search" value="Minsk">
-                    <div class="image-grayscale">B&W</div>
+                    <div class="image-grayscale" id="image-grayscale">B&W</div>
                 </div>
                 <canvas id="canvas" class="canvas" width="512" height="512">
                     update your browser
