refactor: replace clear button

--- a/codejam-image-api/index.html
+++ b/codejam-image-api/index.html
@@ -29,7 +29,6 @@
                         <li class="main-tools__item" title="click b" id="bucket">
                             <img src="./dist/assets/bucket-icon.svg" alt="bucket">
                             <span>Paint bucket</span>
-                            <span class="default" id="default" title="click to clear canvas">clear</span>
                         </li>
                         <li class="main-tools__item" title="click c" id="picker">
                             <img src="./dist/assets/picker-icon.svg" alt="color picker">
@@ -70,6 +69,7 @@
             </div>
             <div class="canvas-wrapper">
                 <div class="image-tools">
+                    <span class="default" id="default" title="click to clear canvas">Clear</span>
                     <div class="load-image" id="load-image">Load</div>
                     <input type="text" name="image-search" id="image-search" class="image-search" value="Minsk">
                     <div class="image-grayscale" id="image-grayscale">B&W</div>
