feat: add login layout

--- a/codejam-image-api/index.html
+++ b/codejam-image-api/index.html
@@ -13,12 +13,11 @@
     <div class="global-wrapper">
         <header class="header">
             <div class="header__left">
-                <div class="burger">
-                    <img src="./dist/assets/nav-icon.svg" alt="nav">
-                </div>
+                <img src="./dist/assets/nav-icon.svg" alt="nav" class="burger">
                 <h1>Codejam - Image API</h1>
             </div>
-            <div class="dots">
+            <div class="header__right">
+                <a href="" class="login" id="login">Login with GitHub</a>
                 <img src="./dist/assets/menu-icon.svg" alt="menu">
             </div>
         </header>
