fix: git api login display

--- a/codejam-image-api/index.html
+++ b/codejam-image-api/index.html
@@ -19,11 +19,11 @@
             </div>
             <div class="header__right">
                 <div class="login" id="login">Login</div>
-                <div class="login-output" id="login-output">
+                <div class="login-output hidden" id="login-output">
                     <a id="user-acc" href="">
                         <div class="user-avatar" id="user-avatar"></div>
                     </a>
-                    <span class="user-name" id="user-name">Ineg22</span>
+                    <span class="user-name" id="user-name"></span>
                     <span class="logout" id="logout">Logout</span>
                 </div>
                 <img src="./dist/assets/menu-icon.svg" alt="menu">
