--- a/palette/index.html
+++ b/palette/index.html
@@ -87,8 +87,7 @@
             </div>
         </main>
     </div>
-    <script src="./js/helper.js"></script>
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
