--- a/codejam-image-api/index.html
+++ b/codejam-image-api/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>codejam-image-api RSS task</title>
     <link rel="stylesheet" href="./dist/style.css">
-    <script src="https://unpkg.com/netlify-auth-providers"></script>
 </head>
 
 <body>
@@ -94,7 +93,7 @@
             </div>
         </main>
     </div>
-    <script src="./dist/bundle.js"></script>
+    <script defer src="./dist/bundle.js"></script>
 </body>
 
 </html>
