refactor: current tips applied

--- a/codejam-image-api/index.html
+++ b/codejam-image-api/index.html
@@ -13,7 +13,7 @@
     <div class="global-wrapper">
         <header class="header">
             <div class="header__left">
-                <img src="./dist/assets/nav-icon.svg" alt="nav" class="burger">
+                <img class="burger" src="./dist/assets/nav-icon.svg" alt="navigation">
                 <h1>Codejam - Image API</h1>
             </div>
             <div class="header__right">
@@ -88,7 +88,7 @@
                     <span>256</span>
                     <span>512</span>
                 </div>
-                <input type="range" name="canvas-size" id="canvas-size" class="canvas-size-input" min='1' max='3'
+                <input class="canvas-size-input" type="range" name="canvas-size" id="canvas-size" min='1' max='3'
                     step='1'>
             </div>
         </main>
