feat: add base html, css layout

--- a/simple-piskel-clone/src/screens/landing/index.html
+++ b/simple-piskel-clone/src/screens/landing/index.html
@@ -9,9 +9,35 @@
 </head>
 
 <body>
-  <h1>rss</h1>
-  <h2>simple piskel clone</h2>
-  <a href="./sprite.html">sprite</a>
+  <header class="header">
+    <h1>Piskel</h1>
+    <a href="./sprite.html" class="sprite-link">create sprite</a>
+  </header>
+
+  <main class="main">
+    <div class="description">
+      <h3>Simple piskel clone app</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo exercitationem a aspernatur. Quaerat enim eveniet
+        quasi, accusamus tempora nisi quo nam a voluptatum minima rem voluptatem dignissimos numquam fugiat vitae.</p>
+      <img src="" alt="">
+    </div>
+    <div class="examples">
+      <h3>Example sprites</h3>
+      <span>Here are some examples of user submitted sprites. Click on a preview to open the sprite in the
+        editor.</span>
+      <div class="promo">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </div>
+  </main>
+  <footer class="footer">
+    <a href="https://t.me/ineg_xd" class="contact-link">Telegram</a>
+    <a href="https://github.com/ineg22" class="contact-link">GitHub</a>
+  </footer>
 </body>
 
 </html>
