feat: add tools

--- a/simple-piskel-clone/src/screens/sprite/index.html
+++ b/simple-piskel-clone/src/screens/sprite/index.html
@@ -87,7 +87,7 @@
       </ul>
     </div>
     <div class="work-area">
-      <canvas id="main-frame" class="main-frame"></canvas>
+      <canvas id="main-frame" class="main-frame" width="512" height="512"></canvas>
     </div>
     <div class="result">
       <div class="preview"></div>
