feat: add tools for mini frames

--- a/simple-piskel-clone/src/screens/sprite/index.html
+++ b/simple-piskel-clone/src/screens/sprite/index.html
@@ -13,8 +13,8 @@
     <h2>PISKEL</h2>
     <span>new sprite*</span>
     <div class="links">
-      <a href="#" class="header-link">sign in</a>
-      <a href="./" class="header-link">landing</a>
+      <a href="#" class="header-link" draggable="false">sign in</a>
+      <a href="./" class="header-link" draggable="false">landing</a>
     </div>
   </header>
   <main class="main">
