feat: add preview animation

--- a/simple-piskel-clone/src/screens/sprite/index.html
+++ b/simple-piskel-clone/src/screens/sprite/index.html
@@ -62,7 +62,10 @@
       <canvas id="main-frame" class="main-frame" width="512" height="512"></canvas>
     </div>
     <div class="result">
-      <div class="preview"></div>
+      <div class="play-pause">play/pause</div>
+      <div class="preview">
+        <canvas id="preview-canvas" class="preview-canvas" width="512" height="512"></canvas>
+      </div>
       <h4 class="result-headers">preview fps</h4>
       <div class="fps-wrapper">
         <span id="fps-display" class="fps-display">2 FPS</span>
