feat: add preview fullscreen

--- a/simple-piskel-clone/src/screens/sprite/index.html
+++ b/simple-piskel-clone/src/screens/sprite/index.html
@@ -62,8 +62,8 @@
       <canvas id="main-frame" class="main-frame" width="512" height="512"></canvas>
     </div>
     <div class="result">
-      <div class="play-pause">play/pause</div>
       <div class="preview">
+        <div class="fullscreen" title="click to watch preview in fullscreen"></div>
         <canvas id="preview-canvas" class="preview-canvas" width="512" height="512"></canvas>
       </div>
       <h4 class="result-headers">preview fps</h4>
@@ -73,9 +73,9 @@
       </div>
       <h4 class="result-headers">sprite resolution</h4>
       <div class="resolution-wrapper">
-        <div class="resolution-item resolution-32">32x32</div>
-        <div class="resolution-item resolution-64">64x64</div>
-        <div class="resolution-item resolution-128">128x128</div>
+        <div class="resolution-item resolution-32" title="be care! you will lose all data">32x32</div>
+        <div class="resolution-item resolution-64" title="be care! you will lose all data">64x64</div>
+        <div class="resolution-item resolution-128" title="be care! you will lose all data">128x128</div>
       </div>
       <h4 class="result-headers">export</h4>
       <div class="export-wrapper">
