feat: add google auth

--- a/simple-piskel-clone/src/screens/sprite/index.html
+++ b/simple-piskel-clone/src/screens/sprite/index.html
@@ -91,7 +91,11 @@
     <h2>PISKEL</h2>
     <span>new sprite*</span>
     <div class="links">
-      <a href="#" class="header-link" draggable="false">sign in</a>
+      <div class="user-info hidden">
+        <div class="user-info__photo"></div>
+        <span class="user-info__user-name">evgeny ivanov</span>
+      </div>
+      <div class="header-link login" draggable="false">log in</div>
       <a href="./" class="header-link" draggable="false">landing</a>
     </div>
   </header>
