--- a/simple-piskel-clone/src/screens/landing/index.html
+++ b/simple-piskel-clone/src/screens/landing/index.html
@@ -15,26 +15,62 @@
   </header>
 
   <main class="main">
+    <h3 class="description__head">Simple piskel clone app</h3>
     <div class="description">
-      <h3>Simple piskel clone app</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo exercitationem a aspernatur. Quaerat enim eveniet
+      <p class="description__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo exercitationem a
+        aspernatur. Quaerat enim eveniet
         quasi, accusamus tempora nisi quo nam a voluptatum minima rem voluptatem dignissimos numquam fugiat vitae.</p>
-      <img src="" alt="">
+      <div class="description__image"></div>
     </div>
     <div class="examples">
-      <h3>Example sprites</h3>
-      <span>Here are some examples of user submitted sprites. Click on a preview to open the sprite in the
-        editor.</span>
-      <div class="promo">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+      <h3 class="examples__head">Example sprites</h3>
+      <p class="examples__text">Here are some examples of user submitted sprites. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro iusto repellat aliquid, hic ipsa impedit
+        temporibus ipsam illum sed laborum
+        laudantium, minima neque voluptas voluptatum tempora! Accusantium, nesciunt voluptatem?</p>
+      <div class="examples__promo">
+        <div class="examples__item example1"></div>
+        <div class="examples__item example2"></div>
+        <div class="examples__item example3"></div>
+        <div class="examples__item example4"></div>
+        <div class="examples__item example5"></div>
+        <div class="examples__item example6"></div>
       </div>
+    </div>
+    <div class="functionality">
+      <h3 class="functionality__head">Functionality overview</h3>
+      <ul class="functionality-list">
+        <li class="functionality-item">
+          <h5 class="functionality-item__head">Google sign in</h5>
+          <p class="functionality-item__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur
+            optio est dolorum perferendis eos eaque tempora nisi deserunt. Qui est nemo explicabo ut mollitia delectus
+            fuga aspernatur aliquid sint at!</p>
+        </li>
+        <li class="functionality-item">
+          <h5 class="functionality-item__head">Live preview</h5>
+          <p class="functionality-item__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur
+            optio est dolorum perferendis eos eaque tempora nisi deserunt. Qui est nemo explicabo ut mollitia delectus
+            fuga aspernatur aliquid sint at!</p>
+        </li>
+        <li class="functionality-item">
+          <h5 class="functionality-item__head">Export to GIF, APNG</h5>
+          <p class="functionality-item__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur
+            optio est dolorum perferendis eos eaque tempora nisi deserunt. Qui est nemo explicabo ut mollitia delectus
+            fuga aspernatur aliquid sint at!</p>
+        </li>
+        <li class="functionality-item">
+          <h5 class="functionality-item__head">Shortcut management</h5>
+          <p class="functionality-item__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur
+            optio est dolorum perferendis eos eaque tempora nisi deserunt. Qui est nemo explicabo ut mollitia delectus
+            fuga aspernatur aliquid sint at!</p>
+        </li>
+      </ul>
     </div>
   </main>
   <footer class="footer">
+    <div class="author"><span>Evgeny Ivanov &lt;</span><a class="contact-mail"
+        href="mailto:ineg22@gmail.com">Ineg22@gmail.com</a>&gt;
+    </div>
     <a href="https://t.me/ineg_xd" class="contact-link">Telegram</a>
     <a href="https://github.com/ineg22" class="contact-link">GitHub</a>
   </footer>
